# report-mattel-routing

./: .dockerignore  .gitignore  DEPLOYMENT.md  README.md  cloud-run-sidecar.yaml  cloud-run.yaml  cloudbuild.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.cursor/rules/: project-structure.mdc
apps/backend/: Dockerfile  README.md  main.py  package.json  pyproject.toml
apps/backend/data/: manual_optimization.csv  result.csv  stores.csv  workers.csv
apps/web/: Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
apps/web/public/: robots.txt
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/web/src/components/: Layout.tsx  Polyline.tsx
apps/web/src/components/agent-table/: columns.tsx  data-table.tsx
apps/web/src/components/coverage-agent-table/: columns.tsx  data-table.tsx
apps/web/src/components/coverage-chain-table/: columns.tsx  data-table.tsx
apps/web/src/components/route-table/: columns.tsx  data-table.tsx
apps/web/src/components/store-table/: columns.tsx  (+2 more)
apps/web/src/hooks/: use-agent-stores.ts  use-agent-time-distribution.ts  use-all-stores.ts  use-chain-stores.ts  use-comparison.ts  use-coverage.ts  use-dashboard.ts  use-maps.ts
apps/web/src/lib/: api.ts
apps/web/src/pages/: BeforeAfter.tsx  Coverage.tsx  Dashboard.tsx  Maps.tsx  NotFound.tsx
docker/fastapi-sidecar/: Dockerfile
docker/nginx-sidecar/: Dockerfile  nginx.conf.template
iac/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: deploy-sidecar.sh  deploy.sh
(+2 files in other folders)
